--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -243,18 +243,18 @@
  POL_communism_subject_DEF: "ポーランド社会主義共和国"
  POL_SOV_communism_subject: "ポーランド・ソビエト社会主義共和国"
  POL_SOV_communism_subject_DEF: "ポーランド・ソビエト社会主義共和国"
- AUS_fascism: "国家社会主義オーストリア"
- AUS_fascism_DEF: "国家社会主義オーストリア"
- AUS_democratic: "オーストリア共和国"
- AUS_democratic_DEF: "オーストリア共和国"
- AUS_neutrality: "オーストリア"
- AUS_neutrality_DEF: "オーストリア"
- AUS_communism: "オーストリア・ソビエト共和国"
- AUS_communism_DEF: "オーストリア・ソビエト共和国"
- AUS_fascism_ADJ: "オーストリア"
- AUS_democratic_ADJ: "オーストリア"
- AUS_neutrality_ADJ: "オーストリア"
- AUS_communism_ADJ: "オーストリア"
+ AUS_fascism: "南ドイツ国"
+ AUS_fascism_DEF: "南ドイツ国"
+ AUS_democratic: "南ドイツ連合"
+ AUS_democratic_DEF: "南ドイツ連合"
+ AUS_neutrality: "南ドイツ"
+ AUS_neutrality_DEF: "南ドイツ"
+ AUS_communism: "南ドイツ社会主義共和国"
+ AUS_communism_DEF: "南ドイツ社会主義共和国"
+ AUS_fascism_ADJ: "南ドイツ"
+ AUS_democratic_ADJ: "南ドイツ"
+ AUS_neutrality_ADJ: "南ドイツ"
+ AUS_communism_ADJ: "南ドイツ"
  AUS: "オーストリア"
  AUS_DEF: "オーストリア"
  AUS_ADJ: "オーストリア"
@@ -1025,6 +1025,8 @@
  SIK_democratic_DEF: "新疆独立共和国"
  SIK_neutrality: "新疆国"
  SIK_neutrality_DEF: "新疆国"
+ SIK_RUS_neutrality_subject: "東トルキスタン総督府"
+ SIK_RUS_neutrality_subject_DEF: "東トルキスタン総督府"
  SIK_communism: "新疆"
  SIK_communism_DEF: "新疆"
  SIK_fascism_ADJ: "新疆"
