--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -23,10 +23,10 @@
  GER_ADJ: "ドイツ"
  ENG_fascism: "帝政イギリス"
  ENG_fascism_DEF: "帝政イギリス"
- ENG_democratic: "イギリス"
- ENG_democratic_DEF: "イギリス"
- ENG_neutrality: "イギリス"
- ENG_neutrality_DEF: "イギリス"
+ ENG_democratic: "連合王国"
+ ENG_democratic_DEF: "連合王国"
+ ENG_neutrality: "連合王国"
+ ENG_neutrality_DEF: "連合王国"
  ENG_communism: "イギリス連合"
  ENG_communism_DEF: "イギリス連合"
  ENG_fascism_ADJ: "イギリス"
@@ -135,8 +135,8 @@
  SWE_subject_DEF: "$OVERLORDADJ$ $SWE$"
  FRA_fascism: "ナシオン・フランセーズ"
  FRA_fascism_DEF: "ナシオン・フランセーズ"
- FRA_democratic: "フランス"
- FRA_democratic_DEF: "フランス"
+ FRA_democratic: "フランス共和国"
+ FRA_democratic_DEF: "フランス共和国"
  FRA_neutrality: "ブルボン・フランス"
  FRA_neutrality_DEF: "ブルボン・フランス"
  FRA_communism: "フランス・コミューン"
