--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -249,19 +249,19 @@
  HOL_FRA_democratic_subject_DEF: "バタビア共和国"
  CZE_fascism: "ボヘミア帝国"
  CZE_fascism_DEF: "ボヘミア帝国"
- CZE_democratic: "チェコスロヴァキア"
- CZE_democratic_DEF: "チェコスロヴァキア"
+ CZE_democratic: "チェコ共和国"
+ CZE_democratic_DEF: "チェコ共和国"
  CZE_neutrality: "ボヘミア王国"
  CZE_neutrality_DEF: "ボヘミア王国"
- CZE_communism: "チェコスロヴァキア連邦"
- CZE_communism_DEF: "チェコスロヴァキア連邦"
- CZE_fascism_ADJ: "チェコスロヴァキア"
- CZE_democratic_ADJ: "チェコスロヴァキア"
- CZE_neutrality_ADJ: "チェコスロヴァキア"
- CZE_communism_ADJ: "チェコスロヴァキア"
- CZE: "チェコスロヴァキア"
- CZE_DEF: "チェコスロヴァキア"
- CZE_ADJ: "チェコスロヴァキア"
+ CZE_communism: "チェコ人民共和国"
+ CZE_communism_DEF: "チェコ人民共和国"
+ CZE_fascism_ADJ: "チェコ"
+ CZE_democratic_ADJ: "チェコ"
+ CZE_neutrality_ADJ: "チェコ"
+ CZE_communism_ADJ: "チェコ"
+ CZE: "チェコ"
+ CZE_DEF: "チェコ"
+ CZE_ADJ: "チェコ"
  CZE_subject: "$OVERLORDADJ$ $CZE$"
  CZE_subject_DEF: "$OVERLORDADJ$ $CZE$"
  POL_fascism: "ファランガ・ポーランド"
@@ -1114,6 +1114,8 @@
  SIK: "新疆"
  SIK_DEF: "新疆"
  SIK_ADJ: "新疆"
+ SIK_RUS_neutrality_subject: "東トルキスタン総督府"
+ SIK_RUS_neutrality_subject_DEF: "東トルキスタン総督府"
  TAN_fascism: "トゥヴァ民族共和国"
  TAN_fascism_DEF: "トゥヴァ民族共和国"
  TAN_democratic: "トゥヴァ独立共和国"
@@ -3267,6 +3269,8 @@
  PRE: "プロイセン"
  PRE_DEF: "プロイセン"
  PRE_ADJ: "プロイセン"
+ PRE_RUS_neutrality_subject: "プロイセン総督府"
+ PRE_RUS_neutrality_subject_DEF: "プロイセン総督府"
  SAX_fascism: "大ザクセン"
  SAX_fascism_DEF: "大ザクセン"
  SAX_democratic: "ザクセン自由国"
