--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -5,8 +5,8 @@
  GER_democratic_DEF: "ドイツ共和国"
  GER_neutrality: "ドイツ帝国"
  GER_neutrality_DEF: "ドイツ帝国"
- GER_communism: "ドイツ社会主義共和国"
- GER_communism_DEF: "ドイツ社会主義共和国"
+ GER_communism: "ドイツ自由社会主義共和国"
+ GER_communism_DEF: "ドイツ自由社会主義共和国"
  GER_fascism_ADJ: "ドイツ"
  GER_democratic_ADJ: "ドイツ"
  GER_neutrality_ADJ: "ドイツ"
@@ -1464,6 +1464,8 @@
  KOR_democratic_ADJ: "韓国"
  KOR_neutrality_ADJ: "朝鮮"
  KOR_communism_ADJ: "朝鮮"
+ KOR_JAP_fascism_subject: "朝鮮総督府"
+ KOR_JAP_fascism_subject_DEF: "朝鮮総督府"
  KOR: "朝鮮"
  KOR_DEF: "朝鮮"
  KOR_ADJ: "朝鮮"
@@ -1473,8 +1475,8 @@
  SER_ITA_fascism_subject_DEF: "セルビア保護国"
  SER_democratic: "セルビア"
  SER_democratic_DEF: "セルビア"
- SER_neutrality: "セルビア"
- SER_neutrality_DEF: "セルビア"
+ SER_neutrality: "セルビア王国"
+ SER_neutrality_DEF: "セルビア王国"
  SER_communism: "セルビア社会主義共和国"
  SER_communism_DEF: "セルビア社会主義共和国"
  SER_fascism_ADJ: "セルビア"
@@ -1511,6 +1513,8 @@
  SYR_democratic_ADJ: "シリア"
  SYR_neutrality_ADJ: "シリア"
  SYR_communism_ADJ: "シリア"
+ SYR_RUS_neutrality_subject: "ロシア領シリア"
+ SYR_RUS_neutrality_subject_DEF: "ロシア領シリア"
  SYR: "シリア"
  SYR_DEF: "シリア"
  SYR_ADJ: "シリア"
