--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1869,19 +1869,19 @@
  ZIM_ADJ: "ジンバブエ"
  COG_fascism: "中央アフリカ帝国"
  COG_fascism_DEF: "中央アフリカ帝国"
- COG_democratic: "東コンゴ共和国"
- COG_democratic_DEF: "東コンゴ共和国"
- COG_neutrality: "ザイール"
- COG_neutrality_DEF: "ザイール"
+ COG_democratic: "コンゴ共和国"
+ COG_democratic_DEF: "コンゴ共和国"
+ COG_neutrality: "コンゴ"
+ COG_neutrality_DEF: "コンゴ"
  COG_communism: "コンゴ民主共和国"
  COG_communism_DEF: "コンゴ民主共和国"
  COG_fascism_ADJ: "コンゴ"
  COG_democratic_ADJ: "コンゴ"
- COG_neutrality_ADJ: "ザイール"
+ COG_neutrality_ADJ: "コンゴ"
  COG_communism_ADJ: "コンゴ"
- COG: "ザイール"
- COG_DEF: "ザイール"
- COG_ADJ: "ザイール"
+ COG: "コンゴ"
+ COG_DEF: "コンゴ"
+ COG_ADJ: "コンゴ"
  KEN_fascism: "大ケニア帝国"
  KEN_fascism_DEF: "大ケニア帝国"
  KEN_democratic: "ケニア共和国"
