--- a/localisation/TR_common/japanese/welcome_splashgui_l_japanese.yml
+++ b/localisation/TR_common/japanese/welcome_splashgui_l_japanese.yml
@@ -10,7 +10,7 @@
   TR_welcome_splash_tab_1_header: "[ROOT.GetCountryIntroHeader]"
   TR_welcome_splash_tab_1_content: "[ROOT.GetCountryIntroContent]"
   default_intro_header: "Tsasreichの歴史"
-  default_intro_content: "このTsareichの歴史では史実とは異なり1914年に起こった第一次世界大戦では1917年にドイツ帝国がパリを陥落させたことによりフランスにおいて革命が起こる。\nまた、史実とは異なりロシア革命は起こらずドイツ軍は東部方面では決定的な勝利を得られずにいた。\n\nフランスでの革命により、1916年より続くカブラの冬により飢えに苦しんでいたドイツ国民は社会主義革命思想に触発され、1918年にドイツ西部地域にてドイツ革命が勃発、またそれに連鎖するような形でオーストリアにおいても革命が起こった。\n\nオーストリア革命を好機と見たオーストリアハンガリー帝国を構成する諸民族は次々と独立を宣言した。革命や同盟国の崩壊などが耳に入った軍は戦争の敗北が近いことを感じ取り、兵士叛乱も勃発。これらの事により追い詰められたヴィルヘルム二世は降伏を決意した。社会主義勢力及びに兵士叛乱がベルリンにまで及び、ヴィルヘルム2世、ドイツ諸邦の国王などの世襲君主は全て権力の位を追われ、ヴィルヘルム2世はオランダに亡命した。ドイツ帝国は滅亡して、代わりにドイツ臨時社会主義政府が興った。\n\nそれ以前に革命が成功していたオーストリアはドイツとの合邦を決めドイツ自由社会主義共和国が成立しその後、ドイツ、協商国官間の休戦協定がブレスト＝リトフスクにて締結、発行され第一次世界大戦は終結した。\n"
+  default_intro_content: "なんか書いてください"
 
   # tab 4 #
   TR_CURRENT_VERSION: "0.1"
