--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -193,7 +193,7 @@
  STATE_192:0 "オデッサ"
  STATE_193:0 "チェルニゴフ"
  STATE_194:0 "モーズィリ"
- STATE_195:0 "レニングラード"
+ STATE_195:0 "ペトログラード"
  STATE_196:0 "ヘルソン"
  STATE_197:0 "ムィコラーイウ"
  STATE_198:0 "ヴィーンヌィツャ"
@@ -211,11 +211,11 @@
  STATE_210:0 "ネヴェリ"
  STATE_211:0 "ブルガス"
  STATE_212:0 "プロヴディフ"
- STATE_213:0 "ムルマンスク"
+ STATE_213:0 "ロマノフ＝ナ＝ムルマニェ"
  STATE_214:0 "アルハンゲリスク"
  STATE_215:0 "オネガ"
  STATE_216:0 "オロネツ"
- STATE_217:0 "スターリングラード"
+ STATE_217:0 "ツァーリツィン"
  STATE_218:0 "ロストフ"
  STATE_219:0 "モスクワ"
  STATE_220:0 "クルスク"
@@ -225,14 +225,14 @@
  STATE_224:0 "ブリャンスク"
  STATE_225:0 "スームィ"
  STATE_226:0 "ドニプロペトロウシク"
- STATE_227:0 "スターリノ"
+ STATE_227:0 "ユゾフカ"
  STATE_228:0 "ヴォロシロフグラード"
  STATE_229:0 "アゼルバイジャン"
  STATE_230:0 "アルメニア"
  STATE_231:0 "グルジア"
  STATE_232:0 "グロズヌイ"
  STATE_233:0 "コーカサス山脈"
- STATE_234:0 "クラスノダール"
+ STATE_234:0 "エカテリノダール"
  STATE_235:0 "スタヴロポリ"
  STATE_236:0 "アストラハン"
  STATE_237:0 "エリスタ"
@@ -245,12 +245,12 @@
  STATE_244:0 "ヴォルホフ"
  STATE_245:0 "ミレロヴォ"
  STATE_246:0 "ルジェフ"
- STATE_247:0 "カリーニン"
+ STATE_247:0 "トヴェーリ"
  STATE_248:0 "ヤロスラヴリ"
  STATE_249:0 "カザン"
  STATE_250:0 "ウリヤノフスク"
  STATE_251:0 "クイブィシェフ"
- STATE_252:0 "ゴーリキー"
+ STATE_252:0 "ニジニ・ノヴゴロド"
  STATE_253:0 "イヴァノヴォ"
  STATE_254:0 "リャザン"
  STATE_255:0 "ペンザ"
@@ -398,7 +398,7 @@
  STATE_397:0 "スィクトィフカル"
  STATE_398:0 "ペルミ"
  STATE_399:0 "イジェフスク"
- STATE_400:0 "キーロフ"
+ STATE_400:0 "ペソチニャ"
  STATE_401:0 "エンゲリス"
  STATE_402:0 "アクチュビンスク"
  STATE_403:0 "チュメニ"
@@ -568,7 +568,7 @@
  STATE_567:0 "ブラーツク"
  STATE_568:0 "クラスノヤルスク"
  STATE_569:0 "ハカシア"
- STATE_570:0 "ノヴォシビルスク"
+ STATE_570:0 "ノヴォニコラエフスク"
  STATE_571:0 "オムスク"
  STATE_572:0 "チェリャビンスク"
  STATE_573:0 "ズラトウースト"
@@ -651,11 +651,11 @@
  STATE_650:0 "アッツ島"
  STATE_651:0 "ウファ"
  STATE_652:0 "オレンブルク"
- STATE_653:0 "スヴェルドロフスク"
+ STATE_653:0 "エカテリンブルク"
  STATE_654:0 "ゴルノ＝アルタイスク"
  STATE_655:0 "北サハリン"
  STATE_656:0 "クウェート"
- STATE_657:0 "ビロビジャン"
+ STATE_657:0 "チホニカヤ＝スタンツィヤ"
  STATE_658:0 "アブダビ"
  STATE_659:0 "アデン"
  STATE_660:0 "赤道アフリカ"
@@ -827,7 +827,7 @@
  STATE_826:0 "アブハジア"
  STATE_827:0 "カバルダ＝バルカル"
  STATE_828:0 "北オセチア"
- STATE_829:0 "エンゲリス＝マルクスシュタット"
+ STATE_829:0 "ポクロフスク＝エカテリネンシュタット"
  STATE_830:0 "ブハラ"
  STATE_831:0 "ヒヴァ"
  STATE_832:0 "タシャウズ"
