--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -761,7 +761,8 @@
  STATE_760:0 "達坂城"
  STATE_761:0 "フルンボイル"
  STATE_762:0 "カトヴィツェ"
- STATE_763:0 "ケーニヒスベルク"
+ STATE_763:0 "キョーニクスベルク"
+ STATE_763_GER:0 "ケーニヒスベルク"
  STATE_764:0 "西バナト"
  STATE_765:0 "カタール"
  STATE_766:0 "ベッサラビア南部"
