--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -13,7 +13,8 @@
  VICTORY_POINTS_3522: "マクデブルク"
  VICTORY_POINTS_3535: "ライプツィヒ"
  VICTORY_POINTS_6282: "シュテッティン"
- VICTORY_POINTS_6332: "ケーニヒスベルク"
+ VICTORY_POINTS_6332: "キョーニクスベルク"
+ VICTORY_POINTS_6332_GER: "ケーニヒスベルク"
  VICTORY_POINTS_6377: "ハノーファー"
  VICTORY_POINTS_6389: "キール"
  VICTORY_POINTS_6488: "フランクフルト"
