added unexisted country Transdniestria

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -5576,3 +5576,21 @@
  ZIM_conservatism: "Zimbabwe"
  ZIM_conservatism_ADJ: "Zimbabwean"
  ZIM_conservatism_DEF: "Republic of Zimbabwe"
+ DNS_fascism: "沿ドニエストル帝国"
+ DNS_fascism_ADJ: "沿ドニエストル"
+ DNS_fascism_DEF: "沿ドニエストル帝国"
+ DNS_democratic: "沿ドニエストル共和国"
+ DNS_democratic_ADJ: "沿ドニエストル"
+ DNS_democratic_DEF: "沿ドニエストル共和国"
+ DNS_democratic: "沿ドニエストル共和国"
+ DNS_democratic_ADJ: "沿ドニエストル"
+ DNS_democratic_DEF: "沿ドニエストル共和国"
+ DNS_neutrality: "沿ドニエストル"
+ DNS_neutrality_ADJ: "沿ドニエストル"
+ DNS_neutrality_DEF: "沿ドニエストル"
+ DNS_communism: "沿ドニエストルソビエト社会主義共和国"
+ DNS_communism_ADJ: "沿ドニエストル"
+ DNS_communism_DEF: "沿ドニエストルソビエト社会主義共和国"
+ DNS: "沿ドニエストル"
+ DNS_ADJ: "沿ドニエストル"
+ DNS_DEF: "沿ドニエストル"
