--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -935,3 +935,6 @@
  STATE_933:0 "シェットランド諸島"
  STATE_934:0 "シュコーデル"
  STATE_935:1 "マラムレシュ"
+ STATE_936:1 ""
+ STATE_937:1 "カレー"
+ STATE_938:1 "ティラスポリ"
