changed state name

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -215,7 +215,7 @@
  STATE_214:0 "アルハンゲリスク"
  STATE_215:0 "オネガ"
  STATE_216:0 "オロネツ"
- STATE_217:0 "ツァーリツィン"
+ STATE_217:0 "ツァリーツィン"
  STATE_218:0 "ロストフ"
  STATE_219:0 "モスクワ"
  STATE_220:0 "クルスク"
