--- a/localisation/japanese/victory_points_l_japanese.yml
+++ b/localisation/japanese/victory_points_l_japanese.yml
@@ -214,7 +214,7 @@
  VICTORY_POINTS_7394: "コーク"
  VICTORY_POINTS_6380: "モスクワ"
  VICTORY_POINTS_525: "キエフ"
- VICTORY_POINTS_3529: "ツァーリツィン"
+ VICTORY_POINTS_3529: "ツァリーツィン"
  VICTORY_POINTS_3151: "ペトログラード"
  VICTORY_POINTS_3151_FIN: "ピエタリ"
  VICTORY_POINTS_6474: "ユゾフカ"
