--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -3,6 +3,8 @@
  communism_noun: "共産主義"
  socialism: "社会主義"
  socialism_noun: "社会主義"
+ socialdemocratic: "社会民主主義"
+ socialdemocratic_noun: "社会民主主義"
  democratic: "自由主義"
  democratic_noun: "自由主義"
  fascism: "ファシスト"
@@ -19,6 +21,8 @@
  marxism_desc: "経済学ならびに歴史学に関する幅広い領域を包摂するマルクス主義にもとづき、マルクス主義政治はマルクスの諸理論を政治的現実にも適用しようとする。このイデオロギーは階級闘争と生産手段の公有化に基づいた社会の移行の必要性により特徴づけられる。"
  leninism: "レーニン主義"
  leninism_desc: "マルクス主義の考えに基づいた政治思想であるレーニン主義は、前衛党によって指導される革命により資本主義社会を転覆し、社会主義国家の建設を目指す。ひとたび権力を手にしたあとは、党は内部の自由な議論を通じて決定を行い、国家を運営する。"
+ luxemburgism: "ルクセンブルク主義"
+ luxemburgism_desc: "ローザ・ルクセンブルクの記述を基としたマルクス主義と共産主義の革命的理論の一つであるルクセンブルク主義は、異なる考えを持つ勢力を抑圧せず、早期の革命と民主主義による社会主義の実現を目指す。"
  stalinism: "スターリン主義"
  stalinism_desc: "マルクス・レーニン主義を継承・発展させた政体を自認するスターリン主義は、あらゆる反革命分子を粛清できるだけの強固な権威主義的社会主義国家を打ち立てるべく、急速な工業化と集団化を追求する。"
  anti_revisionism: "反修正主義"
@@ -48,10 +52,19 @@
  centrism_desc: "穏健主義は適切に現在と未来のニーズに対処する常識的な解決策の実現を望む政府の一形態である。そしてこれは国民の負託を支えとしてこれらのニーズの状況におけるリスクと許容量を考慮し、公益を提供する。"
  anarchism: "無政府主義"
  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
- GER_fascism_party: "NSDAP"
- GER_fascism_party_long: "国家社会主義ドイツ労働者党"
- GER_communism_party: "ドイツ共産党"
- GER_democratic_party: "中央党"
+ GER_fascism_party: "NSAP"
+ GER_fascism_party_long: "国家社会主義労働者党"
+ GER_communism_party: "KPD"
+ GER_communism_party_long: "ドイツ共産党"
+ GER_socialism_party: "USPD"
+ GER_socialism_party_long: "ドイツ独立社会民主党"
+ GER_socialdemocratic_party: "SPD"
+ GER_socialdemocratic_party_long: "ドイツ社会民主党"
+ GER_democratic_party: "DDP"
+ GER_democratic_party_long: "ドイツ民主党"
+ GER_conservatism_party: "フェルキッシュ運動"
+ GER_neutrality_party: "鉄兜団"
+ GER_neutrality_party_long: "鉄兜団、前線兵士同盟"
  GER_neutrality_party_civil_war: "軍事政府"
  GER_neutrality_party_kaiserreich: "DNVP"
  GER_neutrality_party_kaiserreich_long: "ドイツ国家人民党"
