--- a/localisation/TR_common/japanese/welcome_splashgui_l_japanese.yml
+++ b/localisation/TR_common/japanese/welcome_splashgui_l_japanese.yml
@@ -18,5 +18,5 @@
   TR_welcome_splash_tab_4_header: "§Y $TR_CURRENT_VERSION_COMBINED$ にようこそ！\n\n\n\n\n\nTsarreich team§"
   TR_welcome_splash_tab_4_content: "以下アルファベット順\nTop Dev: $TR_welcome_splash_tab_4_content_01$ \nDev:  $TR_welcome_splash_tab_4_content_02$"
   TR_welcome_splash_tab_4_content_00: "このMOD、Tsareich はまだ開発中のMODです。\n\nまだ要素などが出来上がっていませんが、雰囲気などを楽しんでください！"
-  TR_welcome_splash_tab_4_content_01: "Min4r・Rin Kagura・Ruine"
+  TR_welcome_splash_tab_4_content_01: "Min4r・Rin Kagura"
   TR_welcome_splash_tab_4_content_02: "Glocken Schneider・Lucy Prismriver・Mitibiki・Miraata・NY・saa_roog・Tdnjpn・UDL"
