--- a/localisation/japanese/focus_l_japanese.yml
+++ b/localisation/japanese/focus_l_japanese.yml
@@ -134,8 +134,8 @@
  GER_1936_party_conference: "1936年共産党大会"
  GER_left: "左派"
  GER_right: "右派"
- GER_first_five_year_plan: "第一次五ヶ年計画"
- GER_second_five_year_plan: "第二次五ヶ年計画"
+ GER_first_five_year_plan: "第一次五ヵ年計画"
+ GER_second_five_year_plan: "第二次五ヵ年計画"
  GER_agricultural_reform: "農業改革"
  GER_democratic_centralism: "民主集中制"
  GER_union_USPD: "野党左派との合流"
