--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -3,4 +3,23 @@
  Nokindaika_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
  Badgunji: "前時代的軍隊"
  Badgunji_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- 
+ Nokindaika_1: "未熟な近代化"
+ Nokindaika_1_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
+ Badgunji_1: "旧式中心の軍隊"
+ Badgunji_1_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
+ Nokindaika_2: "途上な近代化"
+ Nokindaika_2_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
+ Badgunji_2: "十分でない軍隊"
+ Badgunji_2_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
+ Nokindaika_3: "保守的な政府"
+ Nokindaika_3_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
+ Badgunji_3: "未熟な軍隊"
+ Badgunji_3_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
+ Nokindaika_4: "終わりつつある近代化"
+ Nokindaika_4_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
+ Badgunji_4: "伝統的軍隊"
+ Badgunji_4_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
+ Cantresearch: "絶望的な研究"
+ Cantresearch_desc: "この国で行える研究水準は欧州の中小国にも後れを取るほどである。我々はあらゆる手段を利用してでもこれを克服せねばならない。"
+ wwiTsar: "勝者たるツァーリ"
+ wwiTsar_desc: "かつての大戦争で勝者となったツァーリは、この国の保守的な政治思想に大きく影響を与えている。"
