add content RSI

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -391,14 +391,22 @@
  ITA_ADJ: "イタリア"
  ITA_subject: "$OVERLORDADJ$ $ITA$"
  ITA_subject_DEF: "$OVERLORDADJ$ $ITA$"
- SRI_fascism: "イタリア"
- SRI_fascism_DEF: "イタリア"
- SRI_democratic: "共和制イタリア"
- SRI_democratic_DEF: "共和制イタリア"
+ SRI_fascism: "イタリア社会共和国"
+ SRI_fascism_DEF: "イタリア社会共和国"
+ SRI_democratic: "イタリア共和国"
+ SRI_democratic_DEF: "イタリア共和国"
  SRI_neutrality: "イタリア王国"
  SRI_neutrality_DEF: "イタリア王国"
  SRI_communism: "イタリア社会主義共和国"
  SRI_communism_DEF: "イタリア社会主義共和国"
+ SRI_socialist: "イタリア社会主義共和国"
+ SRI_socialist_DEF: "イタリア社会主義共和国"
+ SRI_socialdemocratic: "イタリア共和国"
+ SRI_socialdemocratic_DEF: "イタリア共和国"
+ SRI_conservatism: "イタリア共和国"
+ SRI_conservatism_DEF: "イタリア共和国"
+ SRI_leftcoalition: "イタリア社会主義共和国"
+ SRI_leftcoalition_DEF: "イタリア社会主義共和国"
  SRI_fascism_ADJ: "イタリア"
  SRI_democratic_ADJ: "イタリア"
  SRI_neutrality_ADJ: "イタリア"
