国家資産省の再編NF
最強工業nf

--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -23,3 +23,5 @@
  Cantresearch_desc: "この国で行える研究水準は欧州の中小国にも後れを取るほどである。我々はあらゆる手段を利用してでもこれを克服せねばならない。"
  wwiTsar: "勝者たるツァーリ"
  wwiTsar_desc: "かつての大戦争で勝者となったツァーリは、この国の保守的な政治思想に大きく影響を与えている。"
+ kokkasisan_broke: "再編された国家資産省"
+ kokkasisan_broke_desc: "戦争のための物資を貯蓄していた国家資産省は、避けられない近代化の犠牲となった。軍の拡大は遅れることになるだろう。"
