--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -3,3 +3,5 @@
  RUS_fallingdown_desc:"その昔、世界最強の列強として名を轟かせたロシア帝国の絢爛たる栄華と秩序は終わろうとしている。もはや皇帝を心の底から敬愛する国民は減り、欧州で広まる共産主義の病に侵されつつある。かつてその手で破壊した欧州の病人オスマン帝国のように、ロシア帝国の鷲は新たな欧州の病人としてその一生を終えようとしている。遅れた近代化は近隣諸国との差を埋めるどころか広げ、もはや臣民はロシアでの生活に望みを見出していない。"
  RUS_kindaika:"上からの近代化"
  RUS_kindaika_desc:"御前会議で行われた審議では、急進化しつつある臣民や周辺諸国の増加への対応として、抜本的な政府、軍事の改革を行うことが決定された。政府で行われていた不要な宗教的儀式は排除され、軍における伝統的訓練については他国から招聘した専門家の提言を基に改善される。しかし、農奴制などの近代的でない制度によって利益を得ている層が皇帝支持者の多くを占める以上、大胆な行動はできない。"
+ RUS_kokkasisan:"国家資産省の再編"
+ RUS_kokkasisan_desc:"比較的新しい国家資産省が、不必要なまでの物資を掌握し、ツァーリの望まない「戦争」のために貯蓄している。この物資を困窮している地域に分配し、現地での生産力の向上に利用する。"
