--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -1,3 +1,5 @@
 ﻿l_japanese:
  GER_heinrich_brandler: "ハインリヒ・ブランドラー"
  GER_otto_strasser: "オットー・シュトラッサー"
+ SRI_SRI_dAnunzio: "ガブリエーレ・ダンヌンツィオ"
+ SRI_RSI_consiglio_socialista: "臨時社会主義評議会"
