--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1,6 +1,6 @@
 ﻿l_japanese:
- GER_fascism: "ドイツ"
- GER_fascism_DEF: "ドイツ"
+ GER_fascism: "ドイツ人民国"
+ GER_fascism_DEF: "ドイツ人民国"
  GER_democratic: "ドイツ共和国"
  GER_democratic_DEF: "ドイツ共和国"
  GER_neutrality: "ドイツ帝国"
