分岐を想定した形に変更

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -5,3 +5,11 @@
  RUS_kindaika_desc:"御前会議で行われた審議では、急進化しつつある臣民や周辺諸国の増加への対応として、抜本的な政府、軍事の改革を行うことが決定された。政府で行われていた不要な宗教的儀式は排除され、軍における伝統的訓練については他国から招聘した専門家の提言を基に改善される。しかし、農奴制などの近代的でない制度によって利益を得ている層が皇帝支持者の多くを占める以上、大胆な行動はできない。"
  RUS_kokkasisan:"国家資産省の再編"
  RUS_kokkasisan_desc:"比較的新しい国家資産省が、不必要なまでの物資を掌握し、ツァーリの望まない「戦争」のために貯蓄している。この物資を困窮している地域に分配し、現地での生産力の向上に利用する。"
+ RUS_kougu:"工具の規格化"
+ RUS_kougu_desc:"政府で使われる工具の多くは規格化されておらず、その上品質が悪い。まずは政府から工具の新調を行い、効率的な開発業務を行えるよう努力するべきだ。"
+ RUS_gunji:"歩兵装備の制式化"
+ RUS_gunji_desc:"ロシア軍で使われている砲や銃は機能不全に陥っている。いくつかの調査を行うことで、他国の装備を少し模倣することができるかもしれない。"
+ RUS_tyokurei1:"勅令:外交の利用"
+ RUS_tyokurei1_desc:"近代化のためにツァーリは勅令を出された。我々は先の戦争の後から強力な威信を恣にしているが、他国は徐々に我が国の近代化の遅れに勘づいている。取り返しがつかなくなる前に、外交的行動のために近代化を進めなければならない。"
+ RUS_underkindaika:"下からの近代化"
+ RUS_underkindaika_desc:"民衆は怒っている。ツァーリによる近代化はもはや何の意味もなしていない。民衆は自らの手で国を近代化する道に突き進もうとしているが、宮廷は今日も紅茶を嗜み夜な夜な舞踏会を開いている。"
