--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -4096,15 +4096,15 @@
  QEM_democratic_ADJ: "クワラ"
  QEM_communism_ADJ: "ケマント"
  QEM_neutrality_ADJ: "ベゲムデル"
- RSI: "イタリア社会共和国"
- RSI_DEF: "イタリア社会共和国"
- RSI_ADJ: "イタリア"
+ SRI: "イタリア社会共和国"
+ SRI_DEF: "イタリア社会共和国"
+ SRI_ADJ: "イタリア"
  RDS: "南の王国"
  RDS_DEF: "南の王国"
  RDS_ADJ: "イタリア"
- ITA_rsi: "$RSI$"
- ITA_rsi_DEF: "$RSI_DEF$"
- ITA_rsi_ADJ: "$RSI_ADJ$"
+ ITA_rsi: "$SRI$"
+ ITA_rsi_DEF: "$SRI_DEF$"
+ ITA_rsi_ADJ: "$SRI_ADJ$"
  ITA_rds: "$RDS$"
  ITA_rds_DEF: "$RDS_DEF$"
  ITA_rds_ADJ: "$RDS_ADJ$"
