--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -1,15 +1,18 @@
 ﻿l_japanese:
- GER_1936_party_conference:"1936年共産党大会"
- GER_left:"左派"
- GER_right:"右派"
- GER_first_five_year_plan:"第一次五ヵ年計画"
- GER_second_five_year_plan:"第二次五ヵ年計画"
- GER_agricultural_reform:"農業改革"
- GER_democratic_centralism:"民主集中制"
- GER_union_USPD:"野党左派との合流"
- GER_suppress_opposition:"反対派を抑圧"
- GER_left_right_pandering:"左右の迎合"
- GER_organize_secret_police:"秘密警察を組織"
- GER_purging_dissidents:"反体制派を粛清"
- GER_united_front_tatics:"統一戦線戦術"
- GER_proletarian_dictatorship:"プロレタリアート独裁"
+ GER_1936_party_conference:0 "1936年共産党大会"
+ GER_left:0 "左派"
+ GER_right:0 "右派"
+ GER_union_USPD:0 "野党左派との合流"
+ GER_suppress_opposition:0 "反対派を抑圧"
+ GER_united_front_tatics:0 "統一戦線戦術"
+ GER_New_socialism:0 "新しい社会主義"
+ GER_socialist_economy:0 "経済政策の見直し"
+ socialist_economy2:0 "市場経済を取り入れる"
+ GER_condemn_revisionists:0 "修正主義者を批判"
+ GER_promote_heavy_industrialization:0 "重工業化を促進"
+ GER_workers_government:0 "労働者政府"
+ GER_new_socialism_economy:0 "新しい社会主義経済"
+ GER_social_fascism:0 "社会ファシズム論"
+ GER_unite_SPD:0 "社共合同"
+ GER_unifying_opinions:0 "意見を統一"
+ GER_totalitarianism:0 "全体主義論"
