--- a/localisation/TR_events/japanese/TR_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_events_l_japanese.yml
@@ -2,4 +2,6 @@
  trfrance.1.t: "インターナショナルの招集"
  trfrance.1.d: "フランスの招集によって、インターナショナルの会議が始まった。我々による労働者の解放のために、まずは欧州における労働者の扱いについて首脳間の会議が行われた。"
  trfrance.1.a: "大きな進捗だ。"
-
+ TR_north_italy.1.t: "波乱の萌芽"
+ TR_north_italy.1.d: "ダンヌンツィオの秘書は今日行われる南北問題解決に向けた会議の予定調整のため彼の部屋に向かっていた。手帳で今日の予定を確認しながら少し早歩きで向かい、少し早めに部屋の前に到着した。秘書が扉に向かってノックをした。だがダンヌンツィオからの返事はなかった。もう一度ノックをしようとしたところ、秘書は気づいた。微かにだが血の匂いがすることに。秘書は覚悟を決め、ドアノブに手を伸ばした。不思議と部屋には鍵はかかっていなかった。重いドアノブを回したところ、扉は開いた。不気味な静寂が広がる部屋の中に秘書は一歩、一歩と足を進めた。だがそこにはフィウメを奪い取った英雄の姿はなかった。あるのはただ、赤い色の液体と、人だったものだけだ。\n秘書はしばらく呆然としていた。そこへ、ダンヌンツィオがいつまで立っても会議に来ないことに心配した評議会議員がダンヌンツィオの部屋を訪れた。気がつけば時計の針は何周もしていた。\n\nダンヌンツィオの死は全イタリアに驚愕を与えた。北イタリアの希望が、北イタリアの誇りが、そして南北統一への道は潰えたのである。社会党員曰く、ダンヌンツィオの死は南側の放った刺客によるものであると。ムッソリーニ曰く、折り合いの悪かった社会党による陰謀であると。国内では様々な議論が巻き起こっているが、ただ事実としてあるのはダンヌンツィオが死んだことと、国内に置ける分断が始まったことだけだ。"
+ TR_north_italy.1.a: "なんということだ"
