--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -1,10 +1,11 @@
 ﻿l_japanese:
- SRI_emergency_council:0 "緊急評議会の設立"
- SRI_just_socialim:0 "正統派社会主義"
- SRI_north-south_problem:0 "南北問題"
- SRI_national_socialism:0 "民族社会主義"
- SRI_iternational_proximity:0 "インターナショナルへの最接近"
- SRI_south_tyrol_issue:0 "南チロル問題"
- SRI_force_ettlement:0 "武力による解決"
- SRI_socialist_work_south:0 "南部での社会主義工作"
- SRI_unity_consciousness_south:0 "南部での民族結束"
+ SRI_emergency_council: "緊急評議会の設立"
+ SRI_just_socialim: "正統派社会主義"
+ SRI_north-south_problem: "南北問題"
+ SRI_north-south_problem.tt: "イベント§Y$SRI_north-south_problem$§!が発生する"
+ SRI_national_socialism: "民族社会主義"
+ SRI_iternational_proximity: "インターナショナルへの最接近"
+ SRI_south_tyrol_issue: "南チロル問題"
+ SRI_force_ettlement: "武力による解決"
+ SRI_socialist_work_south: "南部での社会主義工作"
+ SRI_unity_consciousness_south: "南部での民族結束"
