--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -3,3 +3,4 @@
  GER_otto_strasser: "オットー・シュトラッサー"
  SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
+ SRI_blank_leader: "指導者不在"
