fix alt bop GUI

--- a/localisation/TR_common/japanese/SRI_alt_BOP_l_japanese.yml
+++ b/localisation/TR_common/japanese/SRI_alt_BOP_l_japanese.yml
@@ -1,2 +1,19 @@
 ﻿l_japanese:
+ SRI_unlock_alt_bop: "ディシジョン§Y$bop$§!を解禁する"
  bop: "勢力均衡"
+ SRI_alt_BOP: "勢力均衡"
+ alt_BOP_R_win: "ファシスト党が勝利した!"
+ alt_BOP_R_will_win: "ファシスト党の勢力が圧倒的である!"
+ alt_BOP_R_very_strong: "ファシスト党の勢力が強い!"
+ alt_BOP_R_strong: "ファシスト党が優勢である!"
+ alt_BOP_R_alittle_strong: "ファシスト党がやや優勢である!"
+ alt_BOP_rivalry: "§G勢力は拮抗している§!"
+ alt_BOP_L_alittle_strong: "社会党がやや優勢である！"
+ alt_BOP_L_strong: "社会党が優勢である"
+ alt_BOP_L_very_strong: "社会党の勢力が強い！"
+ alt_BOP_L_will_win: "社会党の勢力が圧倒的である"
+ alt_BOP_L_win: "社会等が勝利した！"
+ alt_BOP_L_side: "[ROOT.alt_BOP_L_side]"
+ alt_BOP_PSI_side: "§Y$SRI_socialism_party_long$§!\n勢力:[?SRI_bop_L_var|Y%0]"
+ alt_BOP_R_side: "[ROOT.alt_BOP_R_side]"
+ alt_BOP_PNF_side: "§Y$SRI_fascism_party_long$§!\n勢力:[?SRI_bop_R_var|Y%0]"
