--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -4,7 +4,7 @@
  SRI_north-south_problem: "南北問題"
  SRI_north-south_problem.tt: "イベント§Y$SRI_north-south_problem$§!が発生する"
  SRI_national_socialism: "民族社会主義"
- SRI_iternational_proximity: "インターナショナルへの最接近"
+ SRI_international_proximity: "インターナショナルへの再接近"
  SRI_south_tyrol_issue: "南チロル問題"
  SRI_force_ettlement: "武力による解決"
  SRI_socialist_work_south: "南部での社会主義工作"
