SRI socialism route

--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -9,3 +9,38 @@
  SRI_force_ettlement: "武力による解決"
  SRI_socialist_work_south: "南部での社会主義工作"
  SRI_unity_consciousness_south: "南部での民族結束"
+ SRI_incit_farmers_south: "南部での農民工作"
+ SRI_romans_descendants: "ローマの末裔"
+ SRI_incitement_in_rome: "ローマ市での扇動"
+ SRI_united_volunteer_soldiers: "統一義勇軍"
+ SRI_risorgimento: "リソルジメント"
+ SRI_support_socialism: "社会主義の支援"
+ SRI_labor_union_law: "労働組合法"
+ SRI_appeal_help: "援助を求める"
+ SRI_recall_defections: "同志の再結集"
+ SRI_reconciliation_communism: "共産主義との和解"
+ SRI_communist_dissolution: "共産主義の禁止"
+ SRI_agrarian_reform: "農業改革"
+ SRI_foreign_industrial_advisers: "外国の産業顧問"
+ SRI_organise_secret_police: "秘密警察を組織"
+ SRI_arrest_Mussolini: "ムッソリーニの投獄"
+ SRI_FRA_adviser: "フランスの専門家"
+ SRI_GER_adviser: "ドイツの専門家"
+ SRI_black_shirts: "黒シャツ隊" 
+ SRI_south_tyrol_issue: "南チロル問題"
+ SRI_call_to_zara: "ザラ問題への呼びかけ"
+ SRI_support_nationalism: "民族主義を支援"
+ SRI_public_works_investment: "公共事業への投資"
+ SRI_domestic_industry_advisers: "国内の産業顧問"
+ SRI_military_industry_investment: "軍需産業への投資"
+ SRI_private_industry_investment: "民間産業への投資"
+ SRI_military_proximity: "軍部への接近"
+ SRI_secret_communist_agreements: "共産主義との秘密協定"
+ SRI_assault_on_communists: "共産主義への襲撃"
+ SRI_strengthening_blackshirts: "黒シャツ隊を強化"
+ SRI_smash_PSI: "社会党の粉砕"
+
+
+
+
+
