--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -14,8 +14,8 @@
  democratic_desc: "民主主義政権"
  conservatism: "保守主義"
  conservatism_noun: "保守主義"
- leftcoalition: "左派連立"
- leftcoalition_noun: "左派連立"
+ coalition: "連立"
+ coalition_noun: "連立"
  liberalism: "自由主義" 
  liberalism_desc: "個人の自由に価値を置く哲学的な長い伝統から、自由主義は諸権利の保護を国家第一の役割と考える。"
  socialism_desc: "改良主義的手段によって平等及び社会主義国家を追求すべく、民主社会主義は国民の信任にもとづいて資本主義の影響を軽減ないし無効化することを目指す。"
@@ -54,7 +54,8 @@
  centrism_desc: "穏健主義は適切に現在と未来のニーズに対処する常識的な解決策の実現を望む政府の一形態である。そしてこれは国民の負託を支えとしてこれらのニーズの状況におけるリスクと許容量を考慮し、公益を提供する。"
  anarchism: "無政府主義"
  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
- Lcoalition: "連立政権"
+ Lcoalition: "左派連立"
+ Rcoalition: "右派連立"
  GER_fascism_party: "NSAP"
  GER_fascism_party_long: "国家社会主義労働者党"
  GER_communism_party: "KPD"
@@ -1083,5 +1084,5 @@
  SRI_neutrality_party_long: "君主国家党"
  SRI_fascism_party: "PNF"
  SRI_fascism_party_long: "国家ファシスト党"
- SRI_leftcoalition_party: "FSUNI"
- SRI_leftcoalition_party_long: "イタリア民族統一社会主義戦線"
+ SRI_coalition_party: "FSUNI"
+ SRI_coalition_party_long: "イタリア民族統一社会主義戦線"
