--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -16,3 +16,24 @@
  GER_unite_SPD:0 "社共合同"
  GER_unifying_opinions:0 "意見を統一"
  GER_totalitarianism:0 "全体主義論"
+ GER_pandering_to_the_left:0 "左派との迎合"
+ GER_positive_propaganda:0 "積極的なプロパガンダ"
+ GER_approaching_international:0 "インターナショナルへの接近"
+ GER_organize_secret_police_force:0 "秘密警察を組織"
+ GER_purge_dissidents:0 "反体制派を粛清"
+ GER_distance_from_international:0 "距離を置く"
+ GER_pangermanic_socialism:0 "汎ゲルマン社会主義"
+ GER_international_revolution:0 "プロレタリア国際主義"
+ GER_reclaiming_territories:0 "旧領土の再請求"
+ GER_recapture_of_schleswig:0 "シュレースヴィヒ奪還"
+ GER_westward_expansion:0 "西方への拡大"
+ GER_crush_the_british_imperialists:0 "イギリスとの決戦"
+ GER_protecting_czech_communists:0 "チェコの共産主義者を保護"
+ GER_supporting_poland:0 "ポーランドの独立運動を支援"
+ GER_warsaw_uprising:0 "ワルシャワ蜂起"
+ GER_Criticizes_Italian_totalitarianism:0 "イタリア全体主義への攻撃"
+ GER_supporting_great_britain:0 "イギリスの革命勢力を支援"
+ GER_war_against_the_fascists:0 "ファシストとの戦争"
+ GER_declaration_of_war_on_america:0 "海を越えて"
+ GER_war_plan_against_russia:0 "ロシアに対する戦争計画"
+ GER_gateway_to_the_mediterranean:0 "地中海への玄関口"
