--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1086,3 +1086,18 @@
  SRI_fascism_party_long: "国家ファシスト党"
  SRI_coalition_party: "FSUNI"
  SRI_coalition_party_long: "イタリア民族統一社会主義戦線"
+
+ RUS_communism_party: "RSDLP-B"
+ RUS_communism_party_long: "ロシア社会民主労働党-多数派"
+ RUS_socialism_party: "SR"
+ RUS_socialism_party_long: "社会革命党"
+ RUS_socialdemocratic_party: "RSDLP-M"
+ RUS_socialdemocratic_party_long: "ロシア社会民主労働党-少数派"
+ RUS_democratic_party: "KDP"
+ RUS_democratic_party: "立憲民主党"
+ RUS_conservatism_party: "PP"
+ RUS_conservatism_party_long: "進歩党"
+ RUS_neutrality_party: "RMU"
+ RUS_neutrality_party_long: "ロシア君主主義同盟"
+ RUS_fascism_party: "RFP"
+ RUS_fascism_party_long: "ロシアファシスト党"
