--- a/localisation/TR_events/japanese/TR_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_events_l_japanese.yml
@@ -5,3 +5,18 @@
  TR_north_italy.1.t: "波乱の萌芽"
  TR_north_italy.1.d: "ダンヌンツィオの秘書は今日行われる南北問題解決に向けた会議の予定調整のため彼の部屋に向かっていた。手帳で今日の予定を確認しながら少し早歩きで向かい、少し早めに部屋の前に到着した。秘書が扉に向かってノックをした。だがダンヌンツィオからの返事はなかった。もう一度ノックをしようとしたところ、秘書は気づいた。微かにだが血の匂いがすることに。秘書は覚悟を決め、ドアノブに手を伸ばした。不思議と部屋には鍵はかかっていなかった。重いドアノブを回したところ、扉は開いた。不気味な静寂が広がる部屋の中に秘書は一歩、一歩と足を進めた。だがそこにはフィウメを奪い取った英雄の姿はなかった。あるのはただ、赤い色の液体と、人だったものだけだ。\n秘書はしばらく呆然としていた。そこへ、ダンヌンツィオがいつまで立っても会議に来ないことに心配した評議会議員がダンヌンツィオの部屋を訪れた。気がつけば時計の針は何周もしていた。\n\nダンヌンツィオの死は全イタリアに驚愕を与えた。北イタリアの希望が、北イタリアの誇りが、そして南北統一への道は潰えたのである。社会党員曰く、ダンヌンツィオの死は南側の放った刺客によるものであると。ムッソリーニ曰く、折り合いの悪かった社会党による陰謀であると。国内では様々な議論が巻き起こっているが、ただ事実としてあるのはダンヌンツィオが死んだことと、国内に置ける分断が始まったことだけだ。"
  TR_north_italy.1.a: "なんということだ"
+
+ TR_Russia.2.t: "赤色テロル"
+ TR_Russia.2.d: "死に体の共産主義者による周到に用意された政治テロルが決行された。1月18日、公務のためモスクワへと向かっていた間に皇帝アレクセイの車が襲撃された。持病の血友病もあり軽い負傷でも死に至る可能性がある彼は、素早く病院へ運び込まれたが、医師らの奮闘も虚しく、彼は騒乱の中で息を引き取った。そして今、赤色テロルの新たな段階が始まり、宮廷の爆破が行われようとしている。"
+ TR_Russia.2.a: "計画は失敗した！"
+ TR_Russia.2.b: "計画は成功した！"
+ TR_Russia.3.t: "継承権問題"
+ TR_Russia.3.d: "次の皇帝となる予定のゲオルギーは、赤色テロルの恐ろしさと凶暴さから、自らの身を案じて即位をためらっている。実際問題、死につつある共産主義による最後の力を振り絞ったテロルによって宮廷関係者は大量に死亡しており、これらの事実は彼を思いとどまらせるのには十分すぎる。"
+ TR_Russia.3.a: "彼に恐ろしい現実を見せるとしよう。"
+ TR_Russia.3.b: "ツァーリが何を恐れようか！"
+
+ TR_Russia_news.1.t: "ロシア皇帝の暗殺"
+ TR_Russia_news.1.d: "TODO"
+ TR_Russia_news.1.a: "なんということだ"
+
+
