--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -37,3 +37,12 @@
  GER_declaration_of_war_on_america:0 "海を越えて"
  GER_war_plan_against_russia:0 "ロシアに対する戦争計画"
  GER_gateway_to_the_mediterranean:0 "地中海への玄関口"
+ GER_proletariat_dictatorship:0 "プロレタリアート独裁"
+ GER_facilitate_nationalization:0 "国有化の促進"
+ GER_workers_democracy:0 "労働者の民主主義"
+ GER_administrative_reform:0 "行政改革"
+ GER_preparing_for_battle:0 "戦いに備える"
+ GER_swiss_partition:0 "スイス分割"
+ GER_assist_small_medium_enterprises:0 "中小企業への援助"
+ GER_agricultural_collectivization:0 "農業集団化"
+ :0 ""
