--- a/localisation/TR_events/japanese/TR_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_events_l_japanese.yml
@@ -6,8 +6,11 @@
  TR_north_italy.1.d: "ダンヌンツィオの秘書は今日行われる南北問題解決に向けた会議の予定調整のため彼の部屋に向かっていた。手帳で今日の予定を確認しながら少し早歩きで向かい、少し早めに部屋の前に到着した。秘書が扉に向かってノックをした。だがダンヌンツィオからの返事はなかった。もう一度ノックをしようとしたところ、秘書は気づいた。微かにだが血の匂いがすることに。秘書は覚悟を決め、ドアノブに手を伸ばした。不思議と部屋には鍵はかかっていなかった。重いドアノブを回したところ、扉は開いた。不気味な静寂が広がる部屋の中に秘書は一歩、一歩と足を進めた。だがそこにはフィウメを奪い取った英雄の姿はなかった。あるのはただ、赤い色の液体と、人だったものだけだ。\n秘書はしばらく呆然としていた。そこへ、ダンヌンツィオがいつまで立っても会議に来ないことに心配した評議会議員がダンヌンツィオの部屋を訪れた。気がつけば時計の針は何周もしていた。\n\nダンヌンツィオの死は全イタリアに驚愕を与えた。北イタリアの希望が、北イタリアの誇りが、そして南北統一への道は潰えたのである。社会党員曰く、ダンヌンツィオの死は南側の放った刺客によるものであると。ムッソリーニ曰く、折り合いの悪かった社会党による陰謀であると。国内では様々な議論が巻き起こっているが、ただ事実としてあるのはダンヌンツィオが死んだことと、国内に置ける分断が始まったことだけだ。"
  TR_north_italy.1.a: "なんということだ"
  TR_germany.1.t: "1936年選挙"
- TR_germany.1.d: "ついに選挙の日が訪れた。ドイツ社会主義の基盤を創り上げ、戦後から与党を続けるドイツ共産党。社会民主党の分派でありながら、今や社会民主党を上回る一大勢力となった独立社会民主党。戦後から大幅に衰退したものの、未だ改良主義者らを中心に確固たる基盤を持つ社会民主党。民族主義を掲げて躍進を続ける国家社会主義労働者党。果たしてどの政党が選挙に勝利するだろうか。"
+ TR_germany.1.d: "ついに選挙の日が訪れた。ドイツ社会主義の基盤を創り上げ、戦後から与党を続けるドイツ共産党。社会民主党の分派でありながら、今や社会民主党を上回る一大勢力となった独立社会民主党。民族主義を掲げて躍進を続ける国家社会主義労働者党。果たしてどの政党が選挙に勝利するだろうか。"
  TR_germany.1.a: "KPDは与党を守り抜いた "
- TR_germany.1.b: "USPD。新たな選択"
- TR_germany.1.c: "SPD。改良主義者は意外な勝利を収めた"
- TR_germany.1.e: "NSAP。民族主義こそドイツに相応しい"
+ TR_germany.1.b: "USPD。修正主義者は意外な勝利を収めた"
+ TR_germany.1.c: "NSAP。民族主義こそドイツに相応しい"
+ TR_germany.2.t: "ドイツ共産党大会"
+ TR_germany.2.d: "我々は選挙に勝利したものの、未だ党内には左右での亀裂が残っている。現在の党首ハインリヒ・ブランドラーは独立社会民主党との協力を主張しており、エルンスト・テールマンらを筆頭とする左派と対立関係にある。新しい代表には誰が相応しいだろうか。"
+ TR_germany.2.a: "ハインリヒ・ブランドラー"
+ TR_germany.2.b: "エルンスト・テールマン"
