ロシア-大戦争の軍隊

--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -1,25 +1,5 @@
 ﻿l_japanese:
- Nokindaika: "失敗した近代化"
- Nokindaika_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
- Badgunji: "前時代的軍隊"
- Badgunji_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- Nokindaika_1: "未熟な近代化"
- Nokindaika_1_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
- Badgunji_1: "旧式中心の軍隊"
- Badgunji_1_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- Nokindaika_2: "途上な近代化"
- Nokindaika_2_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
- Badgunji_2: "十分でない軍隊"
- Badgunji_2_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- Nokindaika_3: "保守的な政府"
- Nokindaika_3_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
- Badgunji_3: "未熟な軍隊"
- Badgunji_3_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- Nokindaika_4: "終わりつつある近代化"
- Nokindaika_4_desc: "ロシアにおける近代化は様々な要因によって遅れており、現在も農奴制の下で産業革命直後のような生活をしている。このような不健全な制度は政府、民間両者の効率性を著しく低下させている。"
- Badgunji_4: "伝統的軍隊"
- Badgunji_4_desc: "第一次世界大戦の時点で旧式装備が多かったロシア軍は、その後も大幅な装備更新を行わず、その戦闘力は低い。"
- wwiTsar: "勝者たるツァーリ"
- wwiTsar_desc: "かつての大戦争で勝者となったツァーリは、この国の保守的な政治思想に大きく影響を与えている。"
- Yubokumin: "遊牧民"
- Yubokumin_desc: "帝国内には多くの遊牧民がいるが、彼らの戸籍は定住地がないため明確でなく、徴兵の対象にもすることができない。"
+ wwi_army_charge: "大戦争の軍隊-突撃"
+ wwi_army_charge_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
+ wwi_army_dig: "大戦争の軍隊-塹壕"
+ wwi_army_dig_desc: "大戦争では過酷な塹壕戦が行われた。長い塹壕からの攻撃で勝利した記憶は、今のロシア軍将校たちに塹壕の強さを過大評価させてしまうことになった。"
