--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -1,5 +1,9 @@
 ﻿l_japanese:
- wwi_army_charge: "大戦争の軍隊-突撃"
- wwi_army_charge_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
- wwi_army_dig: "大戦争の軍隊-塹壕"
- wwi_army_dig_desc: "大戦争では過酷な塹壕戦が行われた。長い塹壕からの攻撃で勝利した記憶は、今のロシア軍将校たちに塹壕の強さを過大評価させてしまうことになった。"
+ RUS_winner_of_wwi: "大戦争の勝者"
+ RUS_winner_of_wwi_desc: "大戦争では、ロシアの軍隊は革命を起こしたドイツ相手に勇敢に戦い、栄光ある勝利を掴んだ。皇帝の権威は国内外を問わず響き渡り、今日の帝国の土台となっている。"
+ RUS_wwi_army_charge: "大戦争の軍隊-突撃"
+ RUS_wwi_army_charge_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
+ RUS_wwi_army_dig: "大戦争の軍隊-塹壕"
+ RUS_wwi_army_dig_desc: "大戦争では過酷な塹壕戦が行われた。長い塹壕からの攻撃で勝利した記憶は、今のロシア軍将校たちに塹壕の強さを過大評価させてしまうことになった。"
+ RUS_nomad_of_russia: "遊牧民"
+ RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
