--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -7,3 +7,9 @@
  RUS_wwi_army_dig_desc: "大戦争では過酷な塹壕戦が行われた。長い塹壕からの攻撃で勝利した記憶は、今のロシア軍将校たちに塹壕の強さを過大評価させてしまうことになった。"
  RUS_nomad_of_russia: "遊牧民"
  RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_agricultural_economy: "農業経済"
+ RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
+ RUS_MGI: "ロシア国家資産省"
+ RUS_MGI_desc: "国家資産省は、農奴解放後の土地の分配を主に行っていたが、大戦争後は資源の管理を中心に行っている。この組織は公然と資源を貯蔵し、他の国家権力から守られたところで現在も戦争のための物資を貯蓄している。"
+ RUS_low_research: "遅滞した技術革新"
+ RUS_low_research_desc: "大戦争での勝利から、ロシアの技術研究は停滞している。このままでは近代化もままならない、前時代的国家となってしまうだろう。"
