--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -1,6 +1,7 @@
 ﻿l_japanese:
  GER_heinrich_brandler: "ハインリヒ・ブランドラー"
  GER_otto_strasser: "オットー・シュトラッサー"
+ RUS_alexei_nikolaevich: "アレクセイ・ニコラエヴィチ"
  SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
  SRI_blank_leader: "指導者不在"
