--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -9,7 +9,13 @@
  RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
  RUS_agricultural_economy: "農業経済"
  RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
+ RUS_agricultural_economy_1: "農業経済"
+ RUS_agricultural_economy_1_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_MGI: "ロシア国家資産省"
  RUS_MGI_desc: "国家資産省は、農奴解放後の土地の分配を主に行っていたが、大戦争後は資源の管理を中心に行っている。この組織は公然と資源を貯蔵し、他の国家権力から守られたところで現在も戦争のための物資を貯蓄している。"
  RUS_low_research: "遅滞した技術革新"
  RUS_low_research_desc: "大戦争での勝利から、ロシアの技術研究は停滞している。このままでは近代化もままならない、前時代的国家となってしまうだろう。"
+ RUS_released_political_prisoner: "政治犯の釈放"
+ RUS_released_political_prisoner_desc: "長い反動時代に無駄な改革として逮捕されていた政治犯たちを釈放し、彼らに十分な発言力と安全を与えることで、改革はより加速されるだろう。"
+ RUS_tsar_infantry: "宮廷親衛隊の創設"
+ RUS_tsar_infantry_desc:"宮廷内にも、新皇帝のことを良く思わない保守層がいる。それまでの期間、皇帝の身の安全をより確実に守るため、皇帝は宮廷親衛隊の創設を指示した。彼らは国が安定するまでの間、彼の身の回りでより高度な護衛を行う。"
