キャラ追加とニュースイベント

--- a/localisation/TR_characters/japanese/TR_traits_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_traits_l_japanese.yml
@@ -1,3 +1,10 @@
 ﻿l_japanese:
  TR_italy_little_hero: "イタリアの小英雄"
  TR_italy_little_hero_desc: "フィウメを奪い取ったイタリアの英雄、ダンヌンツィオ。不安定な共和国は彼の存在により秩序を保っている。"
+
+
+ TR_hero_of_wwi: "大戦争の英雄"
+ TR_hero_of_wwi_desc: "大戦争の英雄として国内からの尊敬を集めている。"4
+ TR_confusion_of_notsar: "空位による混乱"
+ TR_confusion_of_notsar_desc: "長らく皇帝に依存していた帝国政府は、突然の空位により極めて不安定な状態に陥っている。"
+ TR_reformal_tsar: "改革の皇帝"
