--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -9,5 +9,7 @@
  TR_Russia.3.b: "ツァーリが何を恐れようか！"
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
- TR_Russia_news.1.d: "TODO"
+ TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
  TR_Russia_news.1.a: "なんということだ"
+ TR_Russia_news.1.b: "労働者による制裁だ"
+ TR_Russia_news.1.c: "帝国の大きな損失だ"
