--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -2,6 +2,8 @@
  GER_heinrich_brandler: "ハインリヒ・ブランドラー"
  GER_otto_strasser: "オットー・シュトラッサー"
  RUS_alexei_nikolaevich: "アレクセイ・ニコラエヴィチ"
+ RUS_kirill_vladimirovich: "キリル・ウラジーミロヴィチ"
+ RUS_notsar: "空位"
  SRI_dAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
  SRI_blank_leader: "指導者不在"
