スラヴ協商を追加・フランスの独立保証を削除

--- a/localisation/japanese/factions_l_japanese.yml
+++ b/localisation/japanese/factions_l_japanese.yml
@@ -18,6 +18,7 @@
  Axis: "枢軸国"
  Comintern: "コミンテルン"
  International: "第三インターナショナル"
+ Slav_Entente: "スラブ協商"
  western_pacific_sphere: "西太平洋圏"
  south_west_pacific_initiative: "南西太平洋主導国"
  north_american_alliance: "北アメリカ同盟"
