--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -405,8 +405,8 @@
  SRI_socialdemocratic_DEF: "イタリア共和国"
  SRI_conservatism: "イタリア共和国"
  SRI_conservatism_DEF: "イタリア共和国"
- SRI_coalition: "イタリア社会主義共和国"
- SRI_coalition_DEF: "イタリア社会主義共和国"
+ SRI_Lcoalition: "イタリア社会主義共和国"
+ SRI_Lcoalition_DEF: "イタリア社会主義共和国"
  SRI_fascism_ADJ: "イタリア"
  SRI_democratic_ADJ: "イタリア"
  SRI_neutrality_ADJ: "イタリア"
