シベリア測量

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -7,6 +7,12 @@
  TR_Russia.3.d: "次の皇帝となる予定のゲオルギーは、赤色テロルの恐ろしさと凶暴さから、自らの身を案じて即位をためらっている。実際問題、死につつある共産主義による最後の力を振り絞ったテロルによって宮廷関係者は大量に死亡しており、これらの事実は彼を思いとどまらせるのには十分すぎる。"
  TR_Russia.3.a: "彼に恐ろしい現実を見せるとしよう。"
  TR_Russia.3.b: "ツァーリが何を恐れようか！"
+ TR_Russia.4.t: "シベリア測量"
+ TR_Russia.4.d: "ロシアの広大な大地の中でもヨーロッパに近いシベリアの平野には、多くの資源が埋まっている可能性がある。陸軍を中心とした測量隊は、国の最精鋭の技術者たちを連れ、数か月にも及ぶシベリア測量に出発しようとしている。"
+ TR_Russia.4.a: "吉報を待っている。"
+ TR_Russia.5.t: "シベリアの資源"
+ TR_Russia.5.d: "地質学者たちの研究によって予想されたシベリアの資源は、想像以上に大量に埋蔵していることが発覚した。この計画に投入された国家予算と比較しても、長期的な利益となる国内で足りていない資源について、多くの新たな発見があった。すでに政府は、極東に対する調査計画を進めている。"
+ TR_Russia.5.a: "こんなにも沢山か！"
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
  TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
