--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -5,3 +5,9 @@
  RUS_unprison_desc:"長い反動時代に不当に拘束された複数の改革は政治犯たちは、新皇帝の即位に伴って釈放を求めた。改革のために必要な人材として解放された彼らは、かつての人脈を利用しより改革の波を国内に起こすだろう。"
  RUS_remake_national_government:"帝国政府の再編"
  RUS_remake_national_government_desc: "帝国政府の再編によって、改革派をより多く政府に組み込む。これにより、反動的な意見は黙殺され、より加速的な、生産的近代化を実行することが可能になるだろう。"
+ RUS_welcome_civillian:"文民を優遇する"
+ RUS_welcome_civillian_desc:"この国に必要なのは、武力を持つ軍人ではなく、文民だ。文民の比率を重くした政府を作ることで、民生の向上と臣民の目に良く映る近代化を行うことができるだろう。"
+ RUS_welcome_military:"軍人を優遇する"
+ RUS_welcome_military_desc:"軍人は常に国の安定と安寧を第一に考えている。彼らは常に国の安全保障のために最善を尽くす愛国者たちだ。彼らこそ、国の成長のために多く政府に組み込むべきだ。"
+ RUS_search_of_siberia:"シベリア測量"
+ RUS_search_of_siberia_desc:"シベリア付近の地質学者たちの熱心な研究によると、この辺りには多くの資源が埋まっている可能性があるらしい。かつてより話され、馬鹿げた話だと拒否されてきた大規模調査を、今こそ政府の総力を挙げて行うべきだろう。"
