--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -1,5 +1,11 @@
 ﻿l_japanese:
   TR_Russia.tt.1: "皇帝が死亡する。"
   TR_Russia.tt.2: "即位が拒否される。"
+  TR_Russia.tt.3: "まだ見ぬ§Yシベリア§!の資源を探し求める旅の準備を行う。"
+  TR_Russia.tt.4: "シベリアへ出発する。"
+  TR_Russia.tt.5: "§Rこの計画で国家に大きな負担がかかっている！§!"
+  TR_Russia.tt.6: "§R測量中は近代化を進めることはできない！§!"
+  TR_Russia.tt.7: "強力な§Y産業改革§!を行うことができるようになる！"
+  TR_Russia.tt.8: "強力な§Y軍事改革§!を行うことができるようになる！"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
