デバフ強化

--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -19,3 +19,5 @@
  RUS_released_political_prisoner_desc: "長い反動時代に無駄な改革として逮捕されていた政治犯たちを釈放し、彼らに十分な発言力と安全を与えることで、改革はより加速されるだろう。"
  RUS_tsar_infantry: "宮廷親衛隊の創設"
  RUS_tsar_infantry_desc:"宮廷内にも、新皇帝のことを良く思わない保守層がいる。それまでの期間、皇帝の身の安全をより確実に守るため、皇帝は宮廷親衛隊の創設を指示した。彼らは国が安定するまでの間、彼の身の回りでより高度な護衛を行う。"
+ RUS_search_of_siberia_tired:"シベリア測量の予算"
+ RUS_search_of_siberia_tired_desc:"シベリア測量という国家規模の計画には、我が国の少ない先端機器を総動員している。この為、他の政府が使うはずの予算はすべて凍結され、国家による産業の最適化はもはや停止している。"
