--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -1,4 +1,7 @@
 ﻿l_japanese:
+ socialism_acceptance: "社会主義との外交の寛容"
+ socialdemocratic_acceptance: "社会民主主義との外交の寛容"
+ conservatism_acceptance: "保守主義との外交の寛容"
  communism: "共産主義"
  communism_noun: "共産主義"
  socialism: "社会主義"
