--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -9,3 +9,4 @@
   TR_Russia.tt.8: "強力な§Y軍事改革§!を行うことができるようになる！"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
+  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_POLAND_TOOLTIP: "§Y[ROOT.GetNameDefCap]§!は§Y[POL.GetNameDef]§!の解放ができません。"
