ろしあいっぱい！

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -11,3 +11,5 @@
  RUS_welcome_military_desc:"軍人は常に国の安定と安寧を第一に考えている。彼らは常に国の安全保障のために最善を尽くす愛国者たちだ。彼らこそ、国の成長のために多く政府に組み込むべきだ。"
  RUS_search_of_siberia:"シベリア測量"
  RUS_search_of_siberia_desc:"シベリア付近の地質学者たちの熱心な研究によると、この辺りには多くの資源が埋まっている可能性があるらしい。かつてより話され、馬鹿げた話だと拒否されてきた大規模調査を、今こそ政府の総力を挙げて行うべきだろう。"
+ RUS_census:"戸籍改革"
+ RUS_census_desc:"遊牧民や徴兵逃れなどは、我が国のずさんな戸籍制度によるものである。シベリア測量で得た大量の資源を利用して、遊牧民に対する決定的な解決策を講じるべきだ。"
