--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -7,6 +7,12 @@
  RUS_wwi_army_dig_desc: "大戦争では過酷な塹壕戦が行われた。長い塹壕からの攻撃で勝利した記憶は、今のロシア軍将校たちに塹壕の強さを過大評価させてしまうことになった。"
  RUS_nomad_of_russia: "遊牧民"
  RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia_1: "遊牧民"
+ RUS_nomad_of_russia_1_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia_2: "遊牧民"
+ RUS_nomad_of_russia_2_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia_3: "遊牧民"
+ RUS_nomad_of_russia_3_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
  RUS_agricultural_economy: "農業経済"
  RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_agricultural_economy_1: "農業経済"
