--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -7,6 +7,7 @@
   TR_Russia.tt.6: "§R測量中は近代化を進めることはできない！§!"
   TR_Russia.tt.7: "強力な§Y産業改革§!を行うことができるようになる！"
   TR_Russia.tt.8: "強力な§Y軍事改革§!を行うことができるようになる！"
+  TR_Russia.tt.9: "§Yシベリア測量§!で得た大量の資源を利用して近代化を行う。"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   RULE_ALLOW_RELEASE_NATIONS_RUSSIA_POLAND_TOOLTIP: "§Y[ROOT.GetNameDefCap]§!は§Y[POL.GetNameDef]§!の解放ができません。"
