--- a/common/national_focus/00-NF作成時の注意.md
+++ b/common/national_focus/00-NF作成時の注意.md
@@ -5,7 +5,7 @@ focus_tree = {
     id = <任意の名前>
     country = {
         factor = 0
-        modifire = {
+        modifier = {
             add = 101
             tag = <任意の国の国家タグ>
         }
