--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -63,6 +63,8 @@
  GER_fascism_party_long: "国家社会主義労働者党"
  GER_communism_party: "KPD"
  GER_communism_party_long: "ドイツ共産党"
+ GER_communism_unite_party: "SED"
+ GER_communism_unite_party_long: "ドイツ社会主義統一党"
  GER_socialism_party: "USPD"
  GER_socialism_party_long: "ドイツ独立社会民主党"
  GER_socialdemocratic_party: "SPD"
