coplete czecho states

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -7,7 +7,7 @@
  STATE_6:0 "フランドル"
  STATE_7:0 "ホラント"
  STATE_8:0 "ルクセンブルク"
- STATE_9:0 "ボヘミア"
+ STATE_9:0 "プラハ"
  STATE_10:0 "ワルシャワ"
  STATE_11:0 "カウナス"
  STATE_12:0 "ヴィドゼメ"
@@ -939,3 +939,6 @@
  STATE_937:1 "カレー"
  STATE_938:1 "ティラスポリ"
  STATE_939:1 "グラッツ"
+ STATE_940:1 "ヴィソチナ"
+ STATE_941:1 "西ボヘミア"
+ STATE_942:1 "東ボヘミア"
