fix country name

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -5718,9 +5718,9 @@
  CYP_conservatism: "Cyprus"
  CYP_conservatism_ADJ: "Cypriot"
  CYP_conservatism_DEF: "Republic of Cyprus"
- CZE_conservatism: "チェコ共和国"
+ CZE_conservatism: "チェコ国"
  CZE_conservatism_ADJ: "チェコ"
- CZE_conservatism_DEF: "チェコ共和国"
+ CZE_conservatism_DEF: "チェコ国"
  DAH_conservatism: "Benin"
  DAH_conservatism_ADJ: "Beninese"
  DAH_conservatism_DEF: "Republic of Benin"
