--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -5602,3 +5602,39 @@
  DNS: "沿ドニエストル"
  DNS_ADJ: "沿ドニエストル"
  DNS_DEF: "沿ドニエストル"
+ SIC_fascism: "四川"
+ SIC_fascism_ADJ: "四川"
+ SIC_fascism_DEF: "四川"
+ SIC_democratic: "四川"
+ SIC_democratic_ADJ: "四川"
+ SIC_democratic_DEF: "四川"
+ SIC_democratic: "四川"
+ SIC_democratic_ADJ: "四川"
+ SIC_democratic_DEF: "四川"
+ SIC_neutrality: "四川"
+ SIC_neutrality_ADJ: "四川"
+ SIC_neutrality_DEF: "四川"
+ SIC_communism: "四川"
+ SIC_communism_ADJ: "四川"
+ SIC_communism_DEF: "四川"
+ SIC: "四川"
+ SIC_ADJ: "四川"
+ SIC_DEF: "四川"
+ GZH_fascism: "貴州"
+ GZH_fascism_ADJ: "貴州"
+ GZH_fascism_DEF: "貴州"
+ GZH_democratic: "貴州"
+ GZH_democratic_ADJ: "貴州"
+ GZH_democratic_DEF: "貴州"
+ GZH_democratic: "貴州"
+ GZH_democratic_ADJ: "貴州"
+ GZH_democratic_DEF: "貴州"
+ GZH_neutrality: "貴州"
+ GZH_neutrality_ADJ: "貴州"
+ GZH_neutrality_DEF: "貴州"
+ GZH_communism: "貴州"
+ GZH_communism_ADJ: "貴州"
+ GZH_communism_DEF: "貴州"
+ GZH: "貴州"
+ GZH_ADJ: "貴州"
+ GZH_DEF: "貴州"
