--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -7,3 +7,4 @@
  CRO_SLV_conservatism: "クロアート＝スロヴェーン"
  CRO_SLV_neutrality: "クロアート＝スロヴェーン連合王国"
  CRO_SLV_fascism: "クロアート＝スロヴェーン軍政府"
+ SOM_UK_subject: "$OVERLORDADJ$保護領ソマリア"
